addition of bill's sports shop, removal of additional info

--- a/index.html
+++ b/index.html
@@ -228,9 +228,8 @@
             <ul class="bulletless-grey">
     					<li>Online at jigsup.org <span style="color:red"></span></li>
     					<li>Scheels (bait available) <span style="color:red">*</span></li>
-    					<li>Mega Holiday Bridge Street, Chippewa Falls</li>
-              <li>Lake Wissota Travel Stop</li>
     					<li>Eau Claire Ford<span style="color:red">*</span></li>
+              <li>Bill's Sport Shop * <span style="color:red"></span></li>
     					<li>Jacobson's Hardware Chippewa Locations (bait available)<span style="color:red">*</span></li>
     					<li>UWEC Recreation <span style="color:red">*</span></li>
     					<li>The Edge <span style="color:red">*</span></li>
@@ -243,10 +242,7 @@
             <span style="color:red">*</span> <i>Raffle tickets available</i>
           </div>
         </div>
-        <div class="row px-3 mb-5">
-          <span>For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.</span>
-          <!-- <a href="assets/poster2021.pdf" target="_blank">Jig's Up Poster</a> -->
-        </div>
+       <br/>
       </div>
       <div class="col-lg-6">
         <div class="row px-3">
