--- a/tickets.html
+++ b/tickets.html
@@ -168,6 +168,7 @@
 					<li>Online at jigsup.org <span style="color:red"></span></li>
 					<li>Scheels (bait available) <span style="color:red">*</span></li>
 					<li>Eau Claire Ford<span style="color:red">*</span></li>
+          <li>Bill's Sport Shop *<span style="color:red">*</span></li>
 					<li>Jacobson's Hardware Chippewa Locations (bait available)<span style="color:red">*</span></li>
 					<li>UWEC Recreation <span style="color:red">*</span></li>
 					<li>The Edge <span style="color:red">*</span></li>
