--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" target="_blank" href="assets/2023 Jigs Up Tournament Rules.pdf">Rules</a>
+              <a class="dropdown-item brand-blue" target="_blank" href="assets/2024_Rules_of_the_Tournament.pdf">Rules</a>
               <!--<div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_2023.pdf">WIFA Tournament</a>-->
             </div>
@@ -302,12 +302,12 @@
     <div class="row">
       <div class="col-md-3 text-center my-auto mx-auto">
         <a href="https://earthblinds.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/EarthBlinds.png" class="img-fluid" alt="Eskimo">
+          <img src="./images/sponsors/EarthBlinds.png" class="img-fluid" alt="Earth Blinds">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
         <a href="https://www.nicoletbank.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/NicoletBank.png" class="img-fluid" alt="Eskimo">
+          <img src="./images/sponsors/NicoletBank.png" class="img-fluid" alt="Nicolet Bank">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
@@ -360,7 +360,7 @@
     </div>
       <div class="col-md-3 text-center my-auto mx-auto">
       <a href="https://earthblinds.com/ponds/" target="_blank" class="sponsors">
-        <img src="./images/sponsors/EarthPonds.png" class="img-fluid" alt="Eskimo">
+        <img src="./images/sponsors/EarthPonds.png" class="img-fluid" alt="EarthPonds">
       </a>
     </div>
     </div>
