--- a/schedule.html
+++ b/schedule.html
@@ -71,7 +71,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" target="_blank" href="assets/2023 Jigs Up Tournament Rules.pdf">Rules</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/2024_Rules_of_the_Tournament.pdf">Rules</a>
                 <!--<div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_2023.pdf">WIFA Tournament</a>-->
               </div>
