addition of species and one that got away

--- a/prizes.html
+++ b/prizes.html
@@ -888,23 +888,23 @@
                                 <tr>
                                   <td></td>
                                   <td></td>
+                                  <td>Northern</td>
                                   <td></td>
-                                  <td></td>
-                                  <td></td>
+                                  <td>$100 SandBar Gift Certificate</td>
                                 </tr>
                                 <tr>
                                   <td></td>
                                   <td></td>
+                                  <td>Walleye</td>
                                   <td></td>
-                                  <td></td>
-                                  <td></td>
+                                  <td>$100 The View Gift Certificate</td>
                                 </tr>
                                 <tr>
                                   <td></td>
                                   <td></td>
+                                  <td>Crappie</td>
                                   <td></td>
-                                  <td></td>
-                                  <td></td>
+                                  <td>$100 The Edge Gift Certificate</td>
                                 </tr>
                               </tbody>
                             </table>
@@ -925,7 +925,7 @@
                                 <tr>
                                   <td></td>
                                   <td></td>
-                                  <td></td>
+                                  <td>Eskimo HC40 Propane 8inch Auger</td>
                                </tr>
                               </tbody>
                             </table>
