created space between truck and lease & fish prizes

--- a/prizes.html
+++ b/prizes.html
@@ -162,9 +162,22 @@
                     <div class="card-body">
                       <div class="row mb-4">
                         <div class="col-sm-12">
-                          <h2 class="brand-blue">2-Year Lease on a Ford F150 from Eau Claire Ford</h2>
-                          <h4><h4>
-                        </div>
+                          <h2 class="brand-blue">Ford F150 from Eau Claire Ford</h2>
+                          <div class="table-responsive">
+                            <table class="table">
+                          <thead>
+                            <th>Contestant</th>
+                            <th>Ticket Number</th>
+                            <th>Prize</th>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <th></th>
+                              <td></td>
+                              <td>2-Year Lease on a Ford 150</td>
+                            </tr></tbody>
+                        </table></div>
+
                         <div class="col-sm-12">
                           <h2 class="brand-blue">2024 Fish Prize Winners</h2>
                           <div class="table-responsive">
