switching Erbs&Gerbs link with water st website

--- a/tickets.html
+++ b/tickets.html
@@ -256,7 +256,7 @@
     </a>
   </div>
   <div class="col-md-3 text-center my-auto mx-auto">
-    <a href="https://www.erbertandgerberts.com/" target="_blank" class="sponsors">
+    <a href="https://www.erbertandgerberts.com/locations/eau-claire-water-st/" target="_blank" class="sponsors">
       <img src="./images/sponsors/erbertsGerberts.png" class="img-fluid" alt="Erberts and Gerberts">
     </a>
   </div>
