addition of AirForce and, rearrange of silver sponsor

--- a/directions.html
+++ b/directions.html
@@ -294,7 +294,15 @@
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
+
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://bigfishencounters.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
+        </a>
+      </div>
+        
     </div>
+
     <div class="row">
       <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.reconyx.com/" target="_blank" class="sponsors">
@@ -306,14 +314,16 @@
           <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
         </a>
       </div>
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://bigfishencounters.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
-        </a>
-      </div>
+
       <div class="col-md-2 text-center my-auto mx-auto">
         <a href="https://www.rcu.org/" target="_blank" class="sponsors">
           <img src="./images/sponsors/rcu.png" class="img-fluid" alt="Royal Credit Union">
+        </a>
+      </div>
+
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://www.airforce.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/AirForce23.png" class="img-fluid" alt="The Airforce">
         </a>
       </div>
     </div>
