--- a/index.html
+++ b/index.html
@@ -367,54 +367,63 @@
     <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
 
 
-    <!-- Silver Sponsors -->
-    <div class="row">
-      <div class="col-12 mt-4">
-        <h3 class="brand-blue text-center">Silver</h3>
+      <!-- Silver Sponsors -->
+      <div class="row">
+        <div class="col-12 mt-4">
+          <h3 class="brand-blue text-center">Silver</h3>
+        </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/goldstandard.webp" class="img-fluid" alt="Gold Standard Outdoors">
-        </a>
+  
+      <div class="row">
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/goldstandard.webp" class="img-fluid" alt="Gold Standard Outdoors">
+          </a>
+        </div>
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+          </a>
+        </div>
+  
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+          </a>
+        </div>
+  
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="https://bigfishencounters.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
+          </a>
+        </div>
+          
       </div>
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
-        </a>
+  
+      <div class="row">
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="http://www.reconyx.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
+          </a>
+        </div>
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
+          </a>
+        </div>
+  
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="https://www.rcu.org/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/rcu.png" class="img-fluid" alt="Royal Credit Union">
+          </a>
+        </div>
+  
+        <div class="col-md-2 text-center my-auto mx-auto">
+          <a href="https://www.airforce.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/AirForce23.png" class="img-fluid" alt="The Airforce">
+          </a>
+        </div>
       </div>
-
-
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
-        </a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.reconyx.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
-        </a>
-      </div>
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
-        </a>
-      </div>
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://bigfishencounters.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
-        </a>
-      </div>
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.rcu.org/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/rcu.png" class="img-fluid" alt="Royal Credit Union">
-        </a>
-      </div>
-    </div>
 
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
