addition of schedule at The View

--- a/schedule.html
+++ b/schedule.html
@@ -150,7 +150,19 @@
               <tr>
                 <th scope="row">The View</th>
                 <td>3:00PM</td>
-                <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after.</td>
+                <td>Drawings will take place inside The View and will start around 3pm once all fish are weighed in. 
+                  Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after.
+                  <ol>
+                    <li><b>Lion's Club Raffles:</b> claim prizes at the Lion's club table.</li>
+                    <li><b>The One That Got Away:</b> for all who did not catch a fish and put their Fish Ticket Stub into the bucket near the Ice Castle at The Castle at The View by 2:30pm.</li>
+                    <li><b>Raffle:</b> Polaris Sportsman 4-Wheeler, four $500 Scheels Gift Cards, and more!</li>
+                    <li><b>Ford F-150 Lease:</b> drawn from ALL registered fish tickets.</li>
+                    <li><b>Fish Prizes:</b> 1-20, every 10th place to 480, the 481-500 by weight.</li>
+                  </ol>
+                  All winners need to bring their ID and ticket stub to the claim table. Prizes valued over $500 will require additional paperwork for tax purposes.
+                   All winners will be posted online at jigsup.org. Need not be present to win. All winners who did not pick up their prize by 4pm will be 
+                   contacted the following week following the contest and have 30 days to claim their prize at the UWEC Recreation Office.
+                </td>
               </tr>
             </tbody>
           </table>
