removal of double following

--- a/schedule.html
+++ b/schedule.html
@@ -161,7 +161,7 @@
                   </ol>
                   All winners need to bring their ID and ticket stub to the claim table. Prizes valued over $500 will require additional paperwork for tax purposes.
                    All winners will be posted online at jigsup.org. Need not be present to win. All winners who did not pick up their prize by 4pm will be 
-                   contacted the following week following the contest and have 30 days to claim their prize at the UWEC Recreation Office.
+                   contacted the week following the contest and have 30 days to claim their prize at the UWEC Recreation Office.
                 </td>
               </tr>
             </tbody>
